Fix overflow on Photo Preview

--- a/gallery-fe/src/pages/Photo/Photo.module.scss
+++ b/gallery-fe/src/pages/Photo/Photo.module.scss
@@ -3,6 +3,7 @@
   max-height: 512px;
   background-color: var(--photo-background) !important;
   padding: 0 !important;
+  overflow: hidden;
 
   margin-bottom: 16px;
 
